switch to URLs and module paths